--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
+    "classnames": "^2.2.5",
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.1.4",
     "luxon": "^0.3.1",
